@@ -1,4 +1,6 @@
 Version 2.1.175
+    (API) Many skills with RNG elements now send out a SubSkillEvent (which can be used to modify probability or cancel the results), some skills without RNG still send out this event when activated, this event is cancellable so it can be used to make a skill fail
+    Treasure drop rate from Shake, Fishing, Hylian, and Excavation now benefit from the Luck perk
     Added a setting to chat.yml to toggle sending party or admin chat messages to console
     Added a set of "mastery" subskills meant for end game progression
     Added the mastery subskill 'Mother Lode' to Mining
